# rust-postgres

./: .gitignore  README.md  dvdrental.sql
dvdrental/: .env  .gitignore  Cargo.toml  diesel.toml
dvdrental/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
dvdrental/migrations/2024-08-29-230625_00_create_tables/: down.sql  up.sql
dvdrental/migrations/2024-08-29-231301_05_functions/: down.sql  up.sql
dvdrental/migrations/2024-08-29-231816_07_views/: down.sql  up.sql
dvdrental/migrations/2024-08-29-232000_08_foreign_keys/: down.sql  up.sql
dvdrental/migrations/2024-08-29-232857_80_populate_tables/: down.sql  up.sql
dvdrental/src/: lib.rs  models.rs  schema.rs
