[package]
name = "dvdrental"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bigdecimal = "0.4.5"
chrono = { version = "0.4.38", features = ["clock"]}
diesel = { version = "2.2.3", features = ["chrono", "postgres", "r2d2"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_full_text_search = "2.2.0"
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
serde = "1.0.209"

